# go-chase-it

./: README.md
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/launch/: ball_chaser.launch
ball_chaser/src/: drive_bot.cpp  process_image.cpp
my_robot/launch/: amcl.launch  robot_description.launch  world.launch
my_robot/models/environment/: model.config  model.sdf
my_robot/rviz/: localization.rviz
my_robot/urdf/: camera.xacro  lidar.xacro  my_robot.gazebo  my_robot.xacro  wheel.xacro
my_robot/worlds/: my_world.world
